<resources>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Need help?</string>
    <string name="title_activity_main">Campaigns</string>

    <!-- Nav Drawer Menu Items -->
    <string name="menu_item1">CAMPAIGNS</string>
    <string name="menu_item2">INSIDER CLUB</string>
    <string name="menu_item3">ACHIEVEMENTS</string>
    <string name="menu_item4">INSIDER TIPS</string>
    <string name="menu_item5">CONTACT US</string>

    <string name="profile_title">Profile</string>

    <string name="server_base">http://199.217.119.199:3009</string>
    <!--<string name="server_base_new">http://52.11.39.63:8080</string>-->
    <!--<string name="server_base_new">https://www.boostinsider.com</string>-->
    <!--<string name="server_base_new">http://192.168.0.105:8080</string>-->
    <string name="server_base_new">http://192.168.1.113:8080</string>

    <string name="social_post_sb">http://69.64.36.183:8080</string>
    <!--<string name="fb_app_id">683269431817200</string>-->
    <string name="fb_app_id">709850399050811</string>
    <string name="fbToken">fbToken</string>
    <string name="tumblrToken">tumblrToken</string>
    <string name="imagehost">http://s3-us-west-2.amazonaws.com/superboostaa/</string>
    
    <string name="dan_level_1">FRESHMAN INSIDER</string>
    <string name="dan_level_2">SOPHOMORE INSIDER</string>
    <string name="dan_level_3">JUNIOR INSIDER</string>
    <string name="dan_level_4">SENIOR INSIDER</string>
    <string name="dan_level_5">GRADUATE INSIDER</string>

    <string name="level_1">Freshman</string>
    <string name="level_2">Sophomore</string>
    <string name="level_3">Junior</string>
    <string name="level_4">Senior</string>
    <string name="level_5">Graduate</string>

    <string name="loading">Loading...</string>
    <string name="waiting">Waiting...</string>
    <string name="succeed">succeed!</string>
    <string name="failed">failed!</string>
    
    <!--gcm-->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>

    <!--insider tips titles-->
    <string name="one">1. Get Personal</string>
    <string name="two">2. Know Your Audience</string>
    <string name="three">3. Be Creative</string>
    <string name="four">4. Ask Questions</string>








    <string name="app_name">BI</string>
    <string name="welcome">Welcome to BI</string>

    <string name="navigation_view_header_title">Boostinsider</string>
    <string name="campaigns_title">CAMPAIGNS</string>
    <string name="my_campaign_title">MY CAMPAIGN</string>
    <string name="withdraw_title">WALLET</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="re_password">Confirm Password</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="menu_share">Share</string>
    <string name="menu_comments">Comments</string>

    <string name="detail_remaining_budget">Remaining budget</string>
    <string name="detail_description">Description</string>
    <string name="detail_type">Product Type</string>
    <string name="detail_instructions">Instructions</string>
    <string name="detail_note">Note</string>
    <string name="detail_go">Go!</string>
    <string name="detail_copy">Copy and paste this referral link to your social media accounts.</string>

    <string name="start_campaign">Start Campaign</string>
    <string name="request_campaign">Request Campaign</string>

    <string name="production_unavailable">Oops, the production can not be displayed right now.</string>

    <string name="save_image">Save image</string>

</resources>