<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:src="@drawable/splash_label"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/login_fragment_padding"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/bottom_margin" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:textColorHint="@color/hint"
            android:layout_marginBottom="@dimen/bottom_margin" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@android:color/black"
            android:layout_marginBottom="@dimen/bottom_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:gravity="center">

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>