<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/detail_view_pager"
            android:layout_width="match_parent"
            android:layout_height="256dp" />

        <TextView
            android:id="@+id/viewpager_item_indicator"
            style="@style/ContentFont"
            android:textSize="12sp"
            android:textColor="@color/hint"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/detail_title"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/detail_view_pager"
            android:text="Spring Running Music"
            android:textSize="16sp"
            android:padding="16dp"
            android:textColor="@color/primary_text" />

        <View
            android:id="@+id/detail_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_below="@+id/detail_title"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:id="@+id/detail_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_divider"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/detail_budget_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/detail_remaining_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_budget_remain"
                android:text="@string/detail_remaining_budget"
                android:textSize="12sp"
                android:textColor="@color/secondary_text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_divider"
            android:layout_alignParentRight="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/detail_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/detail_earn_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_earn"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/secondary_text" />
        </RelativeLayout>

        <TextView
            android:id="@+id/detail_description_title"
            style="@style/TitleFont"
            android:layout_below="@+id/detail_money"
            android:text="@string/detail_description" />

        <TextView
            android:id="@+id/detail_description_content"
            style="@style/ContentFont"
            android:layout_below="@+id/detail_description_title" />

        <TextView
            android:id="@+id/detail_production_link"
            style="@style/ContentFont"
            android:paddingTop="8dp"
            android:layout_below="@+id/detail_description_content" />

        <TextView
            android:id="@+id/detail_type_title"
            style="@style/TitleFont"
            android:layout_below="@+id/detail_production_link"
            android:text="@string/detail_type" />

        <ImageView
            android:id="@+id/detail_type_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_toLeftOf="@+id/detail_type_content"
            android:layout_below="@+id/detail_type_title" />

        <TextView
            android:id="@+id/detail_type_content"
            style="@style/ContentFont"
            android:paddingLeft="4dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/detail_type_icon"
            android:textSize="12sp"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/detail_instructions_title"
            style="@style/TitleFont"
            android:layout_below="@+id/detail_type_icon"
            android:text="@string/detail_instructions" />

        <TextView
            android:id="@+id/detail_instructions_content"
            style="@style/ContentFont"
            android:layout_below="@+id/detail_instructions_title" />

        <TextView
            android:id="@+id/detail_note_title"
            style="@style/TitleFont"
            android:layout_below="@+id/detail_instructions_content"
            android:text="@string/detail_note" />

        <TextView
            android:id="@+id/detail_note_content"
            style="@style/ContentFont"
            android:layout_below="@+id/detail_note_title" />

        <TextView
            android:id="@+id/detail_link_title"
            style="@style/TitleFont"
            android:layout_below="@+id/detail_note_content"
            android:text="@string/detail_go"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail_link_content"
            style="@style/ContentFont"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/detail_link_title"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/text_border"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail_copy_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_copy"
            android:textSize="12sp"
            android:layout_below="@+id/detail_link_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <Button
            android:id="@+id/detail_copy_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/detail_copy_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            android:background="@android:color/black" />
    </RelativeLayout>
</ScrollView>